2014-04-07  Simon Cook  <simon.cook@embecosm.com>

	* doc/mageec.texi: Remove references to unknown VERSION, UPDATED.

2014-04-06  Pierre Langlois  <pierre.langlois@embecosm.com>

	* testsuite/gcc_plugin.tests/feature-extract.exp: Use a regular
	expression to match features.

2014-04-06  Simon Cook  <simon.cook@embecosm.com>

	* gcc_plugin/feature-extact.cpp (mageec_featextract_exec): Don't
	print out feature vector manually, use new printing interface.
	* include/mageec/mageec-features.h (mageec_feature): Add description
	member, with getter and constructor to use the new member.
	* mageec/features.cpp (pad_string): Add static string pad function.
	(mageec_feature::dump_vector): Add plain text/JSON feature vector
	printer.
	(mageec_feature::mageec_feature): Add constructor which utilizes
	new description member.

2014-04-06  Simon Cook  <simon.cook@embecosm.com>

	* compile: Add compile file, replacing symblink.

2014-04-03  Pierre Langlois  <pierre.langlois@embecosm.com>

	* testsuite/config/site.exp.in: Add python variable.
	* testsuite/python.tests/test-python.exp: Allow the tests to run
	without installing.

2014-04-03  James Pallister  <james.pallister@bristol.ac.uk>
	Fail the configure process if boost is not found

	* configure: Regenerated
	* configure.ac: Fail the configure process if boost is not found,
	    instead of continuing anyway

2014-04-03  James Pallister  <james.pallister@bristol.ac.uk>
	Disabled maintainer mode.

	* Makefile.in: Regenerated
	* aclocal.m4: Regenerated
	* configure: Regenerated
	* configure.ac: Disabled maintainer mode. When doing a fresh git
	    clone, the autotools thinks that configure is older than
	    configure.ac, so attempts to recreate it.
	* doc/Makefile.in: Regenerated
	* gcc_plugin/Makefile.in: Regenerated
	* include/Makefile.in: Regenerated
	* mageec/Makefile.in: Regenerated
	* ml/C5/Makefile.in: Regenerated
	* ml/Makefile.in: Regenerated
	* testsuite/Makefile.in: Regenerated